Minor changes, next update will be for multiple user functionality

--- a/app/views/projects/overview.html.erb
+++ b/app/views/projects/overview.html.erb
@@ -11,6 +11,7 @@
 		<%= link_to 'New project', newproject_path, {:class => "btn btn-primary btn-block"} %>
 	</div>
 	<div class="col-md-4">
-		<h1>Settings</h1>
+		<h1>Settings</h1>	
+		<%= link_to 'Add user', "#", {:class => "btn btn-default btn-block"} %>
 	</div>
 </div>
