--- a/app/views/users/about.html.erb
+++ b/app/views/users/about.html.erb
@@ -20,3 +20,9 @@
 		</p>
 	</div>
 </div>
+
+<div class="row">
+	<div class="col-md-12">
+		<%= link_to 'Back', :back, {:class => "btn btn-default btn-block"} %>
+	</div>
+</div>
